# HDMIprogram

./: CMakeLists.txt  I2C_FTDI_D2XX.cpp  I2C_FTDI_D2XX.h  LICENCE  PNPID.cpp  PNPID.h  Programmer.cpp  Programmer.h  README.md  icon.rc  main.cpp  stdafx.h
